[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0935673, 0.245614, 0.690058, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0.648438, 1, 1, 1, 0.867188, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="ThrustParticle" type="Particles2D" parent="."]
amount = 500
local_coords = false
process_material = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_Timer_timeout"]
